# django-offerman

./: CHANGELOG.md  CONTRACTS.md  MANIFEST.in  README.md  __init__.py  apps.py  conf.py  exceptions.py  pyproject.toml  service.py
adapters/: __init__.py  catalog_backend.py  noop.py  product_info.py  sku_validator.py
admin/: __init__.py  collection.py  listing.py  product.py
contrib/admin_unfold/: __init__.py  admin.py  apps.py  base.py
contrib/suggestions/: __init__.py  suggestions.py
docs/concepts/: pricing.md
migrations/: 0001_initial.py  0002_add_short_description.py  0003_rename_description_to_long_description.py  0004_rename_visibility_fields.py  0005_alter_collection_options_and_more.py  0006_v2_cost_backend_and_perishable.py
models/: __init__.py  collection.py  listing.py  product.py  product_component.py
protocols/: __init__.py  catalog.py  cost.py
signals/: __init__.py
tests/: conftest.py  test_hardening.py  test_models.py  test_service.py  test_v2.py
